# nasm-hello-world

./: CMakeLists.txt  README.md  hello.s
